--- a/appolmedo/pubspec.yaml
+++ b/appolmedo/pubspec.yaml
@@ -52,11 +52,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Sansation
+      fonts:
+        - asset: assets/fonts/Sansation_Bold.ttf
+        - asset: assets/fonts/Sansation_Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
