--- a/appolmedo/pubspec.yaml
+++ b/appolmedo/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
   http: any
   image_picker: ^0.8.4+4
   photo_view: ^0.13.0
-  
+  firebase_core: ^1.6.0
+  firebase_database: ^8.0.0
+
 
 dev_dependencies:
   flutter_test:
