--- a/appolmedo/android/app/build.gradle
+++ b/appolmedo/android/app/build.gradle
@@ -57,9 +57,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-firestore:23.0.4'
-    implementation 'com.google.firebase:firebase-database:20.0.2'
-
-
+    
+    
 }
