--- a/appolmedo/pubspec.yaml
+++ b/appolmedo/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   image_picker: ^0.8.4+4
   photo_view: ^0.13.0
   firebase_core: ^1.6.0
-  firebase_database: ^8.0.0
+  cloud_firestore:
+  
 
 
 dev_dependencies:
