--- a/appolmedo/pubspec.yaml
+++ b/appolmedo/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   photo_view: ^0.13.0
   firebase_core: ^1.6.0
   cloud_firestore:
+  firebase_storage: ^10.1.0
+  firebase_storage_web: ^3.2.0
   
 
 
