--- a/appolmedo/android/app/src/main/AndroidManifest.xml
+++ b/appolmedo/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.appolmedo">
    <application
         android:label="appolmedo"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
