--- a/appolmedo/pubspec.yaml
+++ b/appolmedo/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cloud_firestore:
   firebase_storage: ^10.1.0
   firebase_storage_web: ^3.2.0
+  dart_rut_validator: ^1.1.0
   
 
 
