--- a/appolmedo/pubspec.yaml
+++ b/appolmedo/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_storage: ^10.1.0
   firebase_storage_web: ^3.2.0
   dart_rut_validator: ^1.1.0
+  syncfusion_flutter_datepicker: ^19.3.57
   
 
 
